Update styling for top controls: Spacing issues

--- a/src/client/assets/css/extras.css
+++ b/src/client/assets/css/extras.css
@@ -7,11 +7,6 @@
   margin-right: -20px;
 }
 
-.float-right .btn {
-  position: relative;
-  bottom: -4px;
-}
-
 #print {
   margin-left: 0;
 }
